--- a/branch.html
+++ b/branch.html
@@ -123,62 +123,68 @@
     </div>
     <!-- Page Header End -->
 
-
-  <div class="container-fluid bg-light overflow-hidden px-lg-0" style="margin: 6rem 0;">
+<div class="container-fluid bg-light overflow-hidden px-lg-0" style="margin: 6rem 0;">
     <div class="container contact px-lg-0">
         <div class="row g-0 mx-lg-0">
 
-            <div class="col-lg-6 pe-lg-0 bg-white">
-                <div class="h-100 d-flex align-items-center">
-                    <div class="p-5 w-100">
+            <div class="col-lg-6 bg-white">
+                <div class="p-5">
 
-                        <h6 class="text-primary">Our Branches</h6>
-                        <h1 class="mb-4">Pragati EcoSolar</h1>
+                    <h6 class="text-primary">Our Branches</h6>
+                    <h1 class="mb-4">Pragati EcoSolar</h1>
 
-                        <!-- ===== Branch 1 ===== -->
-                        <div class="card mb-4 shadow-sm">
-                            <div class="card-body">
-                                <h5 class="card-title text-dark">1. BDM: Pratap Dutta</h5>
+                    <!-- ROW FOR TWO CARDS -->
+                    <div class="row g-4">
 
-                                <p class="mb-1"><strong>(A) Kalahandi:</strong></p>
-                                <ul>
-                                    <li>Mrampur – 766102</li>
-                                    <li>Junagarh – 766014</li>
-                                </ul>
+                        <!-- ===== Card 1 ===== -->
+                        <div class="col-md-6">
+                            <div class="card h-100 shadow-sm">
+                                <div class="card-body">
+                                    <h5 class="card-title text-dark">BDM: Pratap Dutta</h5>
 
-                                <p class="mb-1"><strong>(B) Cuttack:</strong></p>
-                                <ul>
-                                    <li>Bissam – 765019</li>
-                                </ul>
+                                    <p class="mb-1"><strong>Kalahandi:</strong></p>
+                                    <ul class="mb-2">
+                                        <li>Mrampur – 766102</li>
+                                        <li>Junagarh – 766014</li>
+                                    </ul>
+
+                                    <p class="mb-1"><strong>Cuttack:</strong></p>
+                                    <ul class="mb-3">
+                                        <li>Bissam – 765019</li>
+                                    </ul>
+
+                                    <p class="mb-0">📞 <strong>9124619222</strong></p>
+                                    <p class="mb-0">📞 <strong>9124318222</strong></p>
+                                </div>
                             </div>
                         </div>
 
-                        <!-- ===== Branch 2 ===== -->
-                        <div class="card mb-4 shadow-sm">
-                            <div class="card-body">
-                                <h5 class="card-title text-dark">2. BDM: Prakash Dash</h5>
+                        <!-- ===== Card 2 ===== -->
+                        <div class="col-md-6">
+                            <div class="card h-100 shadow-sm">
+                                <div class="card-body">
+                                    <h5 class="card-title text-dark">BDM: Prakash Dash</h5>
 
-                                <p class="mb-1"><strong>(A) Jajpur:</strong></p>
-                                <ul>
-                                    <li>Mangalpur – 755011</li>
-                                </ul>
+                                    <p class="mb-1"><strong>Jajpur:</strong></p>
+                                    <ul class="mb-3">
+                                        <li>Mangalpur – 755011</li>
+                                    </ul>
+
+                                    <p class="mb-0">📞 <strong>9124619222</strong></p>
+                                    <p class="mb-0">📞 <strong>9124318222</strong></p>
+                                </div>
                             </div>
-                        </div>
-
-                        <!-- ===== Contact Numbers ===== -->
-                        <div class="mt-4">
-                            <h6 class="text-primary">Contact Numbers</h6>
-                            <p class="mb-1">📞 <strong>9124619222</strong></p>
-                            <p class="mb-0">📞 <strong>9124318222</strong></p>
                         </div>
 
                     </div>
+
                 </div>
             </div>
 
         </div>
     </div>
 </div>
+
 
    
 
