--- a/branch.html
+++ b/branch.html
@@ -125,59 +125,60 @@
 
 
 
-            <div class="col-lg-6 bg-white">
-                <div class="p-5">
+<div class="col-lg-6 bg-white d-flex justify-content-center">
+    <div class="p-5 w-100" style="max-width: 900px;">
 
-                    <h6 class="text-primary">Our Branches</h6>
-                    <h1 class="mb-4">Pragati EcoSolar</h1>
+        <h6 class="text-primary text-center">Our Branches</h6>
+        <h1 class="mb-4 text-center">Pragati EcoSolar</h1>
 
-                    <!-- ROW FOR TWO CARDS -->
-                    <div class="row g-4">
+        <!-- ROW FOR TWO CARDS -->
+        <div class="row g-4 justify-content-center">
 
-                        <!-- ===== Card 1 ===== -->
-                        <div class="col-md-6">
-                            <div class="card h-100 shadow-sm">
-                                <div class="card-body">
-                                    <h5 class="card-title text-dark">BDM: Pratap Dutta</h5>
+            <!-- ===== Card 1 ===== -->
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm text-center">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">BDM: Pratap Dutta</h5>
 
-                                    <p class="mb-1"><strong>Kalahandi:</strong></p>
-                                    <ul class="mb-2">
-                                        <li>Mrampur – 766102</li>
-                                        <li>Junagarh – 766014</li>
-                                    </ul>
+                        <p class="mb-1"><strong>Kalahandi:</strong></p>
+                        <ul class="mb-2 list-unstyled">
+                            <li>Mrampur – 766102</li>
+                            <li>Junagarh – 766014</li>
+                        </ul>
 
-                                    <p class="mb-1"><strong>Cuttack:</strong></p>
-                                    <ul class="mb-3">
-                                        <li>Bissam – 765019</li>
-                                    </ul>
+                        <p class="mb-1"><strong>Cuttack:</strong></p>
+                        <ul class="mb-3 list-unstyled">
+                            <li>Bissam – 765019</li>
+                        </ul>
 
-                                    <p class="mb-0">📞 <strong>9124619222</strong></p>
-                                    <p class="mb-0">📞 <strong>9124318222</strong></p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- ===== Card 2 ===== -->
-                        <div class="col-md-6">
-                            <div class="card h-100 shadow-sm">
-                                <div class="card-body">
-                                    <h5 class="card-title text-dark">BDM: Prakash Dash</h5>
-
-                                    <p class="mb-1"><strong>Jajpur:</strong></p>
-                                    <ul class="mb-3">
-                                        <li>Mangalpur – 755011</li>
-                                    </ul>
-
-                                    <p class="mb-0">📞 <strong>9124619222</strong></p>
-                                    <p class="mb-0">📞 <strong>9124318222</strong></p>
-                                </div>
-                            </div>
-                        </div>
-
+                        <p class="mb-0">📞 <strong>9124619222</strong></p>
+                        <p class="mb-0">📞 <strong>9124318222</strong></p>
                     </div>
-
                 </div>
             </div>
+
+            <!-- ===== Card 2 ===== -->
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm text-center">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">BDM: Prakash Dash</h5>
+
+                        <p class="mb-1"><strong>Jajpur:</strong></p>
+                        <ul class="mb-3 list-unstyled">
+                            <li>Mangalpur – 755011</li>
+                        </ul>
+
+                        <p class="mb-0">📞 <strong>9124619222</strong></p>
+                        <p class="mb-0">📞 <strong>9124318222</strong></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
 
 
 
