--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Banty Jena</h5>
+                            <h5>Banti Jena</h5>
                             <span>Customer Relationship Manager</span>
                         </div>
                     </div>
