--- a/branch.html
+++ b/branch.html
@@ -151,8 +151,8 @@
                             <li>Bissam – 765019</li>
                         </ul>
 
-                        <p class="mb-0">📞 <strong>9124619222</strong></p>
-                        <p class="mb-0">📞 <strong>9124318222</strong></p>
+                        <p class="mb-0">📞 <strong>+91 9124619222</strong></p>
+                        <p class="mb-0">📞 <strong>+91 9124318222</strong></p>
                     </div>
                 </div>
             </div>
