--- a/feature.html
+++ b/feature.html
@@ -99,7 +99,7 @@
                   <a href="branch.html" class="nav-item nav-link">Our Branch</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-             <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-primary rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+             <!-- <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-primary rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
