--- a/branch.html
+++ b/branch.html
@@ -180,7 +180,40 @@
 </div>
 
 
+<h2>Our Branches</h2>
 
+<!-- Angul -->
+<h3>Angul Branch</h3>
+<iframe
+  src="https://www.google.com/maps?q=Angul,Odisha&output=embed"
+  width="100%"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy">
+</iframe>
+
+<!-- Cuttack -->
+<h3>Cuttack Branch</h3>
+<iframe
+  src="https://www.google.com/maps?q=Cuttack,Odisha&output=embed"
+  width="100%"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy">
+</iframe>
+
+<!-- Dhenkanal -->
+<h3>Dhenkanal Branch</h3>
+<iframe
+  src="https://www.google.com/maps?q=Dhenkanal,Odisha&output=embed"
+  width="100%"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy">
+</iframe>
 
 
    
