--- a/branch.html
+++ b/branch.html
@@ -126,13 +126,13 @@
 
 
 <div class="col-lg-12 bg-white d-flex justify-content-center">
-    <div class="p-5 w-100" style="max-width: 900px;">
+    <div class="p-5 w-100" >
 
         <h6 class="text-primary text-center">Our Branches</h6>
         <h1 class="mb-4 text-center">Pragati EcoSolar</h1>
 
         
-        <div class="row g-3 justify-content-center">
+        <div class="row g-4 justify-content-center">
 
             
             <div class="col-md-3">
