--- a/branch.html
+++ b/branch.html
@@ -98,7 +98,7 @@
                     </div>
                 </div> -->
                 <a href="branch.html" class="nav-item nav-link active">Our Branch</a>
-      
+      <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <!-- <a href="https://dilipsahoo100.github.io/Solar-Calculator/Dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
 
