--- a/project.html
+++ b/project.html
@@ -159,7 +159,9 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/Solar-Powered-Water-Pump.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/Solar-Powered-Water-Pump.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/Solar-Powered-Water-Pump.jpg" data-lightbox="portfolio"> <i class="fa fa-eye"></i></a>
+                              <a href="img/SOLAR STREET LIGHT.jpg" data-lightbox="portfolio" style="display:none;"></a>
+                               
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
