--- a/project.html
+++ b/project.html
@@ -159,6 +159,8 @@
                             <a href="img/roof10.jpeg" data-lightbox="rooftop" style="display:none;"></a>
                             <a href="img/roof11.jpeg" data-lightbox="rooftop" style="display:none;"></a>
                             <a href="img/roof12.jpeg" data-lightbox="rooftop" style="display:none;"></a>
+                            <a href="img/roof13.jpeg" data-lightbox="rooftop" style="display:none;"></a>
+                            <a href="img/roof14.jpeg" data-lightbox="rooftop" style="display:none;"></a>
                             
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
