--- a/branch.html
+++ b/branch.html
@@ -97,6 +97,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                 <a href="calculator.html" class="nav-item nav-link">Solar Calculator</a>
                 <a href="branch.html" class="nav-item nav-link active">Our Branch</a>
       <a href="contact.html" class="nav-item nav-link ">Contact</a>
             </div>
