--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                 <a href="calculator.html" class="nav-item nav-link">Solar Calculator</a>
                   <a href="branch.html" class="nav-item nav-link">Our Branch</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
 
