--- a/calculator.html
+++ b/calculator.html
@@ -84,7 +84,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="/" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <a href="project.html" class="nav-item nav-link">Project</a>
                 <!-- <div class="nav-item dropdown">
@@ -97,7 +97,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
-               <a href="calculator.html" class="nav-item nav-link">Solar Calculator</a>
+               <a href="calculator.html" class="nav-item nav-link active">Solar Calculator</a>
                   <a href="branch.html" class="nav-item nav-link">Our Branch</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
