--- a/calculator.html
+++ b/calculator.html
@@ -123,27 +123,59 @@
         </div>
     </div>
     <!-- Page Header End -->
+    
+ <!-- Page start -->
+     <section class="solar-calculator-section">
+  <div class="container">
 
-      <article class="card">
-          <div class="card-header">
-            <h3>🔢 Solar Calculators</h3>
-            <span class="tag">Sizing & Savings</span>
-          </div>
-          <p>Calculate system size, savings and returns for Odisha customers.</p>
-          <div class="links">
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/hybrid_solar_calculator_1.html" target="_blank">
-              Hybrid Solar Calculator
-            </a>
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/odisha_ongrid_solar_savings_calculator.html"
-               target="_blank">
-              Odisha Ongrid Savings Calculator
-            </a>
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/Calaculator.html" target="_blank">
-              3 kW Ongrid Calculator
-            </a>
-          </div>
-        </article>
+    <div class="calculator-header">
+      <h2>🔢 Solar Calculators</h2>
+      <p>Smart sizing & savings calculators customized for <strong>Odisha</strong> consumers.</p>
+      <span class="badge">Odisha DISCOM Assumptions</span>
+    </div>
 
+    <!-- Tabs -->
+    <div class="calculator-tabs">
+      <button class="tab-btn active" data-target="hybrid">Hybrid Solar</button>
+      <button class="tab-btn" data-target="ongrid">Ongrid Savings</button>
+      <button class="tab-btn" data-target="kw3">3 kW Calculator</button>
+    </div>
+
+    <!-- Tab Content -->
+    <div class="calculator-content">
+
+      <!-- Hybrid -->
+      <div class="tab-panel active" id="hybrid">
+        <iframe src="https://dilipsahoo100.github.io/Solar-Calculator/hybrid_solar_calculator_1.html"
+                loading="lazy"></iframe>
+      </div>
+
+      <!-- Ongrid -->
+      <div class="tab-panel" id="ongrid">
+        <iframe src="https://dilipsahoo100.github.io/Solar-Calculator/odisha_ongrid_solar_savings_calculator.html"
+                loading="lazy"></iframe>
+      </div>
+
+      <!-- 3kW -->
+      <div class="tab-panel" id="kw3">
+        <iframe src="https://dilipsahoo100.github.io/Solar-Calculator/Calaculator.html"
+                loading="lazy"></iframe>
+      </div>
+
+    </div>
+
+    <!-- Info -->
+    <div class="calculator-note">
+      <p>
+        ⚠️ Calculations are indicative and based on average Odisha electricity tariffs,
+        net-metering norms and solar irradiance.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- Page end -->
       
 
 
