--- a/about.html
+++ b/about.html
@@ -268,7 +268,7 @@
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-linkedin"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href="https://www.linkedin.com/in/pratap-kumar-das-08a5a7252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                         <div class="p-4">
@@ -287,7 +287,7 @@
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-linkedin"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href="https://www.linkedin.com/in/monalisa-dalai-11a1a42a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                         <div class="p-4">
@@ -304,7 +304,7 @@
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-linkedin"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href="https://www.linkedin.com/in/arpita-biswal-457189178?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                         <div class="p-4">
