--- a/calculator.html
+++ b/calculator.html
@@ -146,13 +146,13 @@
 
       <!-- Hybrid -->
       <div class="tab-panel active" id="hybrid">
-        <iframe src="https://dilipsahoo100.github.io/Solar-Calculator/hybrid_solar_calculator_1.html"
+        <iframe src="hybridsolar.html"
                 loading="lazy"></iframe>
       </div>
 
       <!-- Ongrid -->
       <div class="tab-panel" id="ongrid">
-        <iframe src="https://dilipsahoo100.github.io/Solar-Calculator/odisha_ongrid_solar_savings_calculator.html"
+        <iframe src="ongridsolar.html"
                 loading="lazy"></iframe>
       </div>
 
