--- a/dashboard.html
+++ b/dashboard.html
@@ -519,14 +519,14 @@
           </div>
           <p>Calculate system size, savings and returns for Odisha customers.</p>
           <div class="links">
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/hybrid_solar_calculator_1.html" target="_blank">
+            <a href="hybridsolar.html" target="_blank">
               Hybrid Solar Calculator
             </a>
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/odisha_ongrid_solar_savings_calculator.html"
+            <a href="ongridsolar.html"
                target="_blank">
               Odisha Ongrid Savings Calculator
             </a>
-            <a href="https://dilipsahoo100.github.io/Solar-Calculator/Calaculator.html" target="_blank">
+            <a href="3 kW Ongrid.html" target="_blank">
               3 kW Ongrid Calculator
             </a>
           </div>
