--- a/receipt_utility2.html
+++ b/receipt_utility2.html
@@ -3,7 +3,113 @@
 <head>
 <meta charset="UTF-8">
 <title>Solar Project Money Receipt</title>
-<link rel="stylesheet" href="style.css">
+  <style>
+    body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+
+.form label {
+  display: block;
+  margin-top: 10px;
+}
+
+.form input, .form textarea, .form select {
+  width: 100%;
+  padding: 6px;
+}
+
+.receipt {
+  background: #fff;
+  padding: 25px;
+  margin-top: 30px;
+  display: none;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  height: 70px;
+}
+
+.company {
+  text-align: right;
+  font-size: 14px;
+}
+
+.meta {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 15px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+table, th, td {
+  border: 1px solid #000;
+}
+
+th, td {
+  padding: 8px;
+}
+
+.amount-box {
+  margin-top: 15px;
+}
+
+.sign {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+.no-print {
+  margin-top: 20px;
+  display: block;
+}
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+}
+button {
+  padding: 10px 20px;
+  background: #0d6efd;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background: #084298;
+}
+
+.download-btn {
+  background: #198754;
+}
+
+
+
+
+
+  </style>
 </head>
 
 <body>
