--- a/receipt_utility2.html
+++ b/receipt_utility2.html
@@ -239,6 +239,6 @@ installation of <span class="out_plant"></span> on grid solar system.</p>
   Download / Print PDF
 </button>
 
-<script src="script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
