--- a/receipt_utility2.html
+++ b/receipt_utility2.html
@@ -161,7 +161,7 @@ button:hover {
 <div class="receipt" id="receipt">
 
   <div class="header">
-    <img src="images/image.png" class="logo">
+    <img src="img/image.png" class="logo">
     <div class="company">
       📞 +91 9124318222<br>
       🌐 pragatiecosolar.in<br>
@@ -239,6 +239,6 @@ installation of <span class="out_plant"></span> on grid solar system.</p>
   Download / Print PDF
 </button>
 
-<script src="./js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
