--- a/dashboard.html
+++ b/dashboard.html
@@ -532,6 +532,18 @@
           </div>
         </article>
 
+          <article class="card">
+          <div class="card-header">
+            <h3>💳 Utility</h3>
+            <span class="tag">Internal</span>
+          </div>
+          <p>Generate Receipt and vendor agreement.</p>
+          <div class="links">
+            <a href="receipt_utility2.html" target="_blank">Money Receipt Generator</a>
+            <a href="vendor_utility.html" target="_blank">Vendor Agreement Generator</a>
+          </div>
+        </article>
+
       </section>
     </main>
 
