--- a/dashboard.html
+++ b/dashboard.html
@@ -534,13 +534,13 @@
 
           <article class="card">
           <div class="card-header">
-            <h3>💳 Utility</h3>
-            <span class="tag">Internal</span>
+             <h3>🛠 Utility</h3>
+             <span class="tag">Documents</span></span>
           </div>
-          <p>Generate Receipt and vendor agreement.</p>
+         <p>Generate receipts and vendor agreements.</p>
           <div class="links">
             <a href="receipt_utility2.html" target="_blank">Money Receipt Generator</a>
-            <a href="vendor_utility.html" target="_blank">Vendor Agreement Generator</a>
+            <a href="vedor_utility.html" target="_blank">Vendor Agreement Generator</a>
           </div>
         </article>
 
