--- a/dashboard.html
+++ b/dashboard.html
@@ -419,7 +419,7 @@
 
  <button onclick="register()">Register</button><br>
 
-<button onclick="resetPassword()" style="margin-top:8px;background:#eee;color:#333">
+<button onclick="resetPassword()">
   Forgot Password?
 </button>
 
